html template first setup

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>City Info App</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <script defer src="app.bundle.js?baecdc8d2283031d8c4a"></script><script defer src="secondary.bundle.js?baecdc8d2283031d8c4a"></script></head>
+  </head>
   <body>
     <h1>Template activated</h1>
   </body>
