--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <h1>Template activated</h1>
+    <header>
+      <h1>City Lifestyle Info App</h1>
+      <div class="mode-btn-wrapper">
+        <div class="mode-btn">Browse a city</div>
+        <div class="mode-btn">Compare two cities</div>
+      </div>
+    </header>
+
+    <main>
+      <div></div>
+    </main>
   </body>
 </html>
