working on draw card function

--- a/src/index.html
+++ b/src/index.html
@@ -33,13 +33,13 @@
               <div class="score-label">
                 <em>Urban area one: </em><strong>8.5</strong>/10
               </div>
-              <div class="bar"><span class="meter-fill urban-one"></span></div>
+              <div class="bar"><span class="meter-fill urban-0"></span></div>
             </div>
             <div class="score-wrapper">
               <div class="score-label">
                 <em>Urban area two: </em><strong>7</strong>/10
               </div>
-              <div class="bar"><span class="meter-fill urban-two"></span></div>
+              <div class="bar"><span class="meter-fill urban-1"></span></div>
             </div>
           </div>
         </div>
