first attempt at substring function

--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,30 @@
       </div>
       <h2>Search for a city</h2>
       <div class="search-btn-wrapper">
-        <input class="search-bar" type="text" placeholder="Enter a city" />
-        <div class="search-btn">Submit</div>
+        <form autocomplete="off">
+          <input
+            id="first-city-input"
+            name="first-city-input"
+            class="search-bar"
+            type="text"
+            placeholder="Enter a city"
+          />
+          <div class="search-btn">Submit</div>
+        </form>
       </div>
       <div class="compare-city-wrapper">
         <h2>Select another city to compare to</h2>
         <div class="search-btn-wrapper">
-          <input class="search-bar" type="text" placeholder="Enter a city" />
-          <div class="search-btn">Submit</div>
+          <form autocomplete="off">
+            <input
+              id="second-city-input"
+              name="second-city-input"
+              class="search-bar"
+              type="text"
+              placeholder="Enter a city"
+            />
+            <div class="search-btn">Submit</div>
+          </form>
         </div>
       </div>
     </header>
