submit buttons identifiers

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
             list="search-city-suggestions"
           />
           <datalist id="search-city-suggestions"> </datalist>
-          <button class="search-btn">Submit</button>
+          <button class="search-btn" id="first-city-submit-btn">Submit</button>
         </form>
       </div>
       <div class="compare-city-wrapper">
@@ -39,7 +39,9 @@
               onkeyup=""
             />
             <datalist id="second-city-suggestions"> </datalist>
-            <button class="search-btn">Submit</button>
+            <button class="search-btn" id="second-city-submit-btn">
+              Submit
+            </button>
           </form>
         </div>
       </div>
