--- a/src/index.html
+++ b/src/index.html
@@ -59,23 +59,24 @@
 
     <main>
       <div class="cards-wrapper">
-        <div class="card">
-          <h4 class="category-title">CATEGORY</h4>
+        <!-- <div class="card">
+          <h4 class="city-title">CITY</h4>
           <div class="urban-scores-wrapper">
             <div class="score-wrapper">
               <div class="score-label">
-                <em>Urban area one: </em><strong>8.5</strong>/10
+                <em>Category one: </em><strong>8.5</strong>/10
               </div>
               <div class="bar"><span class="meter-fill urban-0"></span></div>
             </div>
+
             <div class="score-wrapper">
               <div class="score-label">
-                <em>Urban area two: </em><strong>7</strong>/10
+                <em>Category two: </em><strong>7</strong>/10
               </div>
               <div class="bar"><span class="meter-fill urban-1"></span></div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </main>
   </body>
