optimized event delegation

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
             class="search-bar"
             type="text"
             placeholder="Enter a city"
-            list="search-city-suggestions"
+            list="first-city-suggestions"
           />
-          <datalist id="search-city-suggestions"> </datalist>
+          <datalist id="first-city-suggestions"> </datalist>
           <button
             class="search-btn"
             name="first-city"
