scores section complete

--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,8 @@
 
     <main>
       <div class="cards-wrapper">
+        <div class="first card-container not-visible"></div>
+        <div class="second card-container not-visible"></div>
         <!-- <div class="card">
           <h4 class="city-title">CITY</h4>
           <div class="urban-scores-wrapper">
