minor querySelector fixes

--- a/src/index.html
+++ b/src/index.html
@@ -59,8 +59,8 @@
 
     <main>
       <div class="cards-wrapper">
-        <div class="first card-container not-visible"></div>
-        <div class="second card-container not-visible"></div>
+        <div class="first-card-container not-visible"></div>
+        <div class="second-card-container not-visible"></div>
         <!-- <div class="card">
           <h4 class="city-title">CITY</h4>
           <div class="urban-scores-wrapper">
@@ -79,6 +79,8 @@
             </div>
           </div>
         </div> -->
+        <div class="first-summary-container"></div>
+        <div class="second-summary-container"></div>
       </div>
     </main>
   </body>
