--- a/src/index.html
+++ b/src/index.html
@@ -79,8 +79,8 @@
             </div>
           </div>
         </div> -->
-        <div class="first-summary-container"></div>
-        <div class="second-summary-container"></div>
+        <div class="first-summary-container summary not-visible"></div>
+        <div class="second-summary-container summary not-visible"></div>
       </div>
     </main>
   </body>
