fixed some comments/classes

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,11 @@
       <div class="cards-wrapper">
         <div class="first-card-container not-visible"></div>
         <div class="second-card-container not-visible"></div>
-        <!-- <div class="card">
+        <!-- 
+          
+          Generated HTML example here below
+
+          <div class="card">
           <h4 class="city-title">CITY</h4>
           <div class="urban-scores-wrapper">
             <div class="score-wrapper">
@@ -77,6 +81,8 @@
               </div>
               <div class="bar"><span class="meter-fill urban-1"></span></div>
             </div>
+
+            ...
           </div>
         </div> -->
         <div class="first-summary-container summary not-visible"></div>
