removed useless comments

--- a/src/index.html
+++ b/src/index.html
@@ -59,34 +59,18 @@
 
     <main>
       <div class="cards-wrapper">
-        <div class="first-card-container not-visible"></div>
-        <div class="second-card-container not-visible"></div>
-        <!-- 
-          
-          Generated HTML example here below
-
-          <div class="card">
-          <h4 class="city-title">CITY</h4>
-          <div class="urban-scores-wrapper">
-            <div class="score-wrapper">
-              <div class="score-label">
-                <em>Category one: </em><strong>8.5</strong>/10
-              </div>
-              <div class="bar"><span class="meter-fill urban-0"></span></div>
-            </div>
-
-            <div class="score-wrapper">
-              <div class="score-label">
-                <em>Category two: </em><strong>7</strong>/10
-              </div>
-              <div class="bar"><span class="meter-fill urban-1"></span></div>
-            </div>
-
-            ...
-          </div>
-        </div> -->
-        <div class="first-summary-container summary not-visible"></div>
-        <div class="second-summary-container summary not-visible"></div>
+        <div class="first-card-container not-visible">
+          <!-- JavaScript rendered elements here -->
+        </div>
+        <div class="second-card-container not-visible">
+          <!-- JavaScript rendered elements here -->
+        </div>
+        <div class="first-summary-container summary not-visible">
+          <!-- JavaScript rendered elements here -->
+        </div>
+        <div class="second-summary-container summary not-visible">
+          <!-- JavaScript rendered elements here -->
+        </div>
       </div>
     </main>
   </body>
