--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
   <body>
     <header class="page-header">
       <div class="title-wrapper">
-        <h1>City Lifestyle Info App</h1>
+        <h1>Urban Area Info App</h1>
       </div>
-      <h2>Search for a city</h2>
+      <h2>Search for a Urban Area</h2>
       <div class="search-btn-wrapper">
         <form autocomplete="off">
           <input
@@ -30,9 +30,10 @@
             Submit
           </button>
         </form>
+        <div class="error-label first-error"></div>
       </div>
       <div class="compare-city-wrapper">
-        <h2>Select another city to compare to</h2>
+        <h2>Select another Urban Area to compare to</h2>
         <div class="search-btn-wrapper">
           <form autocomplete="off">
             <input
@@ -53,6 +54,7 @@
               Submit
             </button>
           </form>
+          <div class="error-label second-error"></div>
         </div>
       </div>
     </header>
@@ -73,5 +75,6 @@
         </div>
       </div>
     </main>
+    <footer>Powered by <a href="https://teleport.org/">Teleport</a></footer>
   </body>
 </html>
