first version complete

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
         </form>
         <div class="error-label first-error"></div>
       </div>
-      <div class="compare-city-wrapper">
+      <div class="compare-city-wrapper not-visible">
         <h2>Select another Urban Area to compare to</h2>
         <div class="search-btn-wrapper">
           <form autocomplete="off">
