--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       <div class="title-wrapper">
         <h1>Urban Area Info App</h1>
       </div>
-      <h2>Search for a Urban Area</h2>
+      <h2>Search for an Urban Area</h2>
       <div class="search-btn-wrapper">
         <form autocomplete="off">
           <input
